
Changelog for 8.2.0

Collector:
    - support for command execution during sync
    - support for partial evidence transfer

DB:
    - Ruby updated to 1.9.3-p194
    - MongoDB updated to 2.2.0
    - HASP driver updated to 6.25
    - utilities to restart the rcs services
    - configuration templates
    - evidence filters can now be saved for future reuse
    - full text search for the info evidence field
    - not interesting evidence field are no more exported to connectors
    - more accurate evidence size recalculation for targets and operations
    - support for incremental backups
    - the metadata backup is now created automatically if not present
    - new operations, targets and factory are displayed to other users upon refresh
    - smtp authentication for alert emails
    - export report now includes commands and ip
    - report creation let you chose between acquired and received time
    - report creation let you chose if you want the notes or not
    - evidence can be delete in batch and not only selectively (provided you have the license)
    - fix for operation and target backup not performing correctly
    - fix for file manager not deleting all entries in some cases
