@@ -3,9 +3,6 @@ TODO 8.2.0:
 
     backup of config db
 
-    with mongo 2.2.x
-        logRotate
-
 
     archive option for targets / operations
         - archive in a backup
